--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 		<!-- Two -->
 			<section id="two" class="main special">
 				<div class="container">
-					<span class="image fit primary"><img src="images/pic02.jpg" alt="" /></span>
+					<span class="image fit primary"><img src="images/pic02.JPG" alt="" /></span>
 					<div class="content">
 						<header class="major">
 							<h2>Stuff I do</h2>
