--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 						<header class="major">
 							<h2>Stuff I do</h2>
 						</header>
-						<p>I work with the <a href="http://www.agrability.org/">AgrAbility</a> and HARVEST programs at Virginia Tech continuing my research in user-centered design in agriculture that I started at the University of Florida. In addition to addressing usability and accessibility of precision agriculture technologies, I am studying how to best utilize big data in agriculture while also protecting the privacy and security rights of the growers.
+						<p>I work with the <a href="http://www.agrability.org/">AgrAbility</a> and <a href="https://www.harvestrcn.org/">HARVEST</a> programs at Virginia Tech continuing my research in user-centered design in agriculture that I started at the University of Florida. In addition to addressing usability and accessibility of precision agriculture technologies, I am studying how to best utilize big data in agriculture while also protecting the privacy and security rights of the growers.
 							<br>
 							<br>
 
