--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<header id="header" class="alt">
 						
 						<h1><strong>Dr. Brianna B. Posadas</strong></h1>
-						<p><strong>Computing Innovation Fellow at Virginia Tech Department of Agricultural, Leadership, and Community Education</strong></p>
+						<p><strong>Computing Innovation Fellow <br> at Virginia Tech Department of Agricultural, Leadership, and Community Education</strong></p>
 					</header>
 
 				<!-- Nav -->
