--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<header id="header" class="alt">
 						
 						<h1><strong>Dr. Brianna B. Posadas</strong></h1>
-						<p><strong>Computing Innovation Fellow <br> at Virginia Tech Department of Agricultural, Leadership, and Community Education</strong></p>
+						<p><strong>Assistant Professor <br> at Virginia Tech ​School of Plant and Environmental Sciences</strong></p>
 					</header>
 
 				<!-- Nav -->
@@ -48,7 +48,7 @@
 										<header class="major">
 											<h2>Introduction</h2>
 										</header>
-										<p>My name is Dr. Brianna B. Posadas and I am a <a href= "https://cccblog.org/2020/09/14/announcing-the-2020-computing-innovation-fellows/"> Computing Innovation Fellow</a> with the <a href="https://www.alce.vt.edu/"> Department of Agricultural, Leadership, and Community Education</a> at Virginia Tech. I am also a fellow with the <a href= "https://foodsystems.centers.vt.edu/">Center for Food Systems and Community Transformation</a> and affiliated with the <a href="https://caia.cals.vt.edu/"> Center for Advanced Innovation in Agriculture</a>. My research is focused on the intersection of agriculture, technology, and user-centered design. 
+										<p>My name is Dr. Brianna B. Posadas and I am an Assistant Professor at the School of Plant and Environmental Sciences at Virginia Tech. I am also a fellow with the <a href= "https://foodsystems.centers.vt.edu/">Center for Food Systems and Community Transformation</a> and affiliated with the <a href="https://caia.cals.vt.edu/"> Center for Advanced Innovation in Agriculture</a>. My research is focused on the intersection of agriculture, technology, and user-centered design. 
 										<br>
 										<br>
 										When I completed my PhD at the University of Florida, I was the <a href= "https://www.cise.ufl.edu/spotlight-posadas-graduates-as-the-first-latina-to-earn-a-ph-d-from-uf-cise/"> first Latina to earn a doctorate</a> from the department of Computer and Information Science and Engineering. I received my master of science in agricultural and biological engineering also at UF and my bachelor of science in engineering from <a href="http://www.hmc.edu/">Harvey Mudd College</a>.  </p>
