--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 										<header class="major">
 											<h2>Introduction</h2>
 										</header>
-										<p>My name is Dr. Brianna B. Posadas and I am an Assistant Professor at the School of Plant and Environmental Sciences at Virginia Tech. I am also a fellow with the <a href= "https://foodsystems.centers.vt.edu/">Center for Food Systems and Community Transformation</a> and affiliated with the <a href="https://caia.cals.vt.edu/"> Center for Advanced Innovation in Agriculture</a>. My research is focused on the intersection of agriculture, technology, and user-centered design. 
+										<p>My name is Dr. Brianna B. Posadas and I am an Assistant Professor at the School of Plant and Environmental Sciences at Virginia Tech where I am the PI of the <a href="https://mehulbvt.github.io/portfolio/"> Posadas Lab </a>. I am also a fellow with the <a href= "https://foodsystems.centers.vt.edu/">Center for Food Systems and Community Transformation</a> and affiliated with the <a href="https://caia.cals.vt.edu/"> Center for Advanced Innovation in Agriculture</a>. My research is focused on the intersection of agriculture, technology, and user-centered design. 
 										<br>
 										<br>
 										When I completed my PhD at the University of Florida, I was the <a href= "https://www.cise.ufl.edu/spotlight-posadas-graduates-as-the-first-latina-to-earn-a-ph-d-from-uf-cise/"> first Latina to earn a doctorate</a> from the department of Computer and Information Science and Engineering. I received my master of science in agricultural and biological engineering also at UF and my bachelor of science in engineering from <a href="http://www.hmc.edu/">Harvey Mudd College</a>.  </p>
