--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
 									<h2>Teaching</h2>
 								</header></center>
 									<ul>
-										<li>Virginia Tech, ALS 5334/CRN 10339 - Professional Communication in Agriculture and Life Sciences</li>
-										<li>Virginia Tech, ALS 2984 - Smart Farm Seminar</li>
-										
+										<li>Virginia Tech, ALS 5814: Smart Farms: Topics in Agricultural Leadership & Community Education, Department of Agricultural Leadership and Community Education, graduate seminar course, Spring 2022</li>
+										<li>Virginia Tech, ALS 5334: Professional Communication in Ag & Life Sciences, Department of Agricultural Leadership and Community Education, graduate course, Spring 2021</li>
+										<li>Washington English Center, ESOL level 2B, Washington D.C., adult education, Spring 2020</li>
 									</ul>
 								</section>
 
