--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
 								</header></center>
 									<ul>
 										<li>Virginia Tech, ALS 5814: Smart Farms: Topics in Agricultural Leadership & Community Education, Department of Agricultural Leadership and Community Education, graduate seminar course, Spring 2022</li>
+										<li>Virginia Tech, Data Science for the Public Good Summer Scholars Program, Department of Agricultural and Applied Economics, Virginia Tech, summer research experience for undergraduates, Summer 2021, 2022</li> 
 										<li>Virginia Tech, ALS 5334: Professional Communication in Ag & Life Sciences, Department of Agricultural Leadership and Community Education, graduate course, Spring 2021</li>
 										<li>Washington English Center, ESOL level 2B, Washington D.C., adult education, Spring 2020</li>
 									</ul>
